--- a/src/app.css
+++ b/src/app.css
@@ -28,9 +28,6 @@ nav a {
   display: inline-block;
 }
 
-.content {
-  padding: 1rem;
-}
 .image {
   width: 25%;
   min-width: 250px;
@@ -40,4 +37,18 @@ nav a {
 .blog-post {
  display: flex;
  flex-direction: column;
+}
+
+
+.parallax {
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw
+}
+
+.parallax:nth-of-type(1) {
+  background-image: url('../public/uploads/earphoriatv.jpg');
 }
